[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/State.gd" type="Script" id=1]

[node name="State" type="Node"]
script = ExtResource( 1 )

[node name="SecondsTimer" type="Timer" parent="."]

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="SecondsTimer" to="." method="on_SecondsTimer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="on_GameOverTimer_timeout"]
